--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,11 +64,15 @@ jobs:
           coverage.xml
         retention-days: 7
 
-  build:
+    build:
     name: Build and Push Docker Image
     needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/'))
+    
+    permissions:
+      packages: write
+      contents: read
     
     steps:
     - name: Checkout code
@@ -82,7 +86,8 @@ jobs:
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
-        password: ${{ secrets.CR_PAT }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
     
     - name: Extract metadata for Docker
       id: meta
