--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -259,7 +259,7 @@ jobs:
         set -x
         
         # 测试连接 - 这一行完全修正
-        timeout 30s sshpass -p "$VM_PASSWORD" ssh -v \
+        timeout 30s sshpass -p "$VM_PASSWORD" ssh -vvv \
           -o StrictHostKeyChecking=no \
           -o ConnectTimeout=10 \
           -o LogLevel=ERROR \
