--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,8 +84,8 @@ jobs:
     
     - name: Build and push
       run: |
-        docker build -t ghcr.io/${{ github.repository }}:latest .
-        docker push ghcr.io/${{ github.repository }}:latest
+        docker build -t ghcr.io/${{ github.repository }}:sha-${{ github.sha }} .
+        docker push ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
 
   deploy:
     name: Deploy to VM
@@ -119,7 +119,7 @@ jobs:
         
         # 2. 拉取镜像（带重试）
         echo "步骤2: 拉取Docker镜像..."
-        IMAGE="ghcr.io/${{ github.repository }}:latest"
+        IMAGE="ghcr.io/${{ github.repository }}:sha-${{ github.sha }}"
         
         for attempt in {1..3}; do
           echo "拉取尝试 $attempt/3..."
